--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -12,9 +12,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@ignite-ui/tokens": "*",
+    "@ignite-ui/ts-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
