--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@ignite-ui/tokens": "*",
     "@ignite-ui/ts-config": "*",
+    "@ignite-ui/eslint-config": "*",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
   }
