--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,6 +18,7 @@
     "@storybook/addon-links": "^7.4.2",
     "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.4.2",
+    "@storybook/manager-api": "^7.4.2",
     "@storybook/react": "^7.4.2",
     "@storybook/react-vite": "^7.4.2",
     "@storybook/testing-library": "^0.2.1",
@@ -29,9 +30,11 @@
     "vite": "^4.4.9"
   },
   "dependencies": {
+    "@ignite-ui/eslint-config": "*",
+    "@ignite-ui/ts-config": "*",
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
-    "@ignite-ui/eslint-config": "*",
+    "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
