--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -12,8 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Setup Node.js
-        uses: actions/checkout@v4
-        with: node-version: 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 16
 
       - run: npm ci
 
