--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,13 +2,14 @@ name: Deploy docs
 
 on:
   push:
-    branch:
+    branches:
       - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-     steps:
+    steps:
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -22,6 +23,6 @@ jobs:
 
       - name: Deploy storybook
         working-directory: ./packages/docs
-       run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
+        run: npm run deploy-storybook -- --ci --existing-output-dir=storybook-static
         env:
           GH_TOKEN: ${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}
