--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/tokens",
+  "name": "@ignite-ui-mauriani/tokens",
   "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
